--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,6 @@
 {
   "*.+(js|mjs|cjs|jsx|mjsx|ts|mts|cts|tsx|mtsx)": [
-    "npm run lint:fix",
+    "npm run lint",
     "npm run prettier:fix"
   ],
 }
