--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^14.0.0",
+    "msw": "^1.3.2",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
