--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prettier": "prettier --check src",
     "prettier:fix": "prettier --write src",
     "commitlint": "commitlint --edit",
-    "coverage": "yarn test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}' --collectCoverageFrom='src/components/content/**/*.{ts,tsx}' --collectCoverageFrom='!src/components/**/{ErrorBoundary,Loader}.{ts,tsx}'"
+    "coverage": "yarn test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}' --collectCoverageFrom='src/components/content/**/*.{ts,tsx}' --collectCoverageFrom='!src/components/**/{ErrorBoundary,Loader,Header}.{ts,tsx}'"
   },
   "dependencies": {
     "prepush-if-changed": "^1.0.8",
@@ -47,12 +47,15 @@
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-localstorage-mock": "^2.4.26",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^14.0.0",
-    "msw": "^1.3.2",
+    "msw": "^2.0.5",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
+    "undici": "^5.27.2",
     "vite": "^4.4.8"
   }
 }
