--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
