--- a/package.json
+++ b/package.json
@@ -1,64 +1,47 @@
 {
-  "name": "my-second-project",
+  "name": "my-vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "test": "jest --config ./jest.config.ts",
-    "prepare": "husky install",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint --ext .ts,.tsx --fix src",
     "preview": "vite preview",
-    "prettier": "prettier --check src",
+    "lint:fix": "eslint --ext .ts,.tsx --fix src",
+    "prepare": "husky install",
     "prettier:fix": "prettier --write src",
-    "commitlint": "commitlint --edit",
-    "coverage": "yarn test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}' --collectCoverageFrom='src/components/content/**/*.{ts,tsx}' --collectCoverageFrom='!src/components/**/{ErrorBoundary,Loader,Header}.{ts,tsx}'"
+    "commitlint": "commitlint --edit"
   },
   "dependencies": {
-    "prepush-if-changed": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.18.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.6.2",
-    "react-redux": "^8.1.3"
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.20.0",
+    "yup": "^1.3.2",
+    "@reduxjs/toolkit": "^1.9.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "@vitejs/plugin-react": "^4.0.4",
-    "eslint": "^8.46.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^8.0.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-fetch-mock": "^3.0.3",
-    "jest-localstorage-mock": "^2.4.26",
-    "jest-environment-jsdom": "^29.7.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "husky": "^8.0.0",
     "lint-staged": "^14.0.0",
-    "msw": "^2.0.5",
-    "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.0.2",
-    "undici": "^5.27.2",
-    "vite": "^4.4.8"
+    "prettier": "^3.1.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
