--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.0",
     "yup": "^1.3.2",
-    "@reduxjs/toolkit": "^1.9.7"
+    "@reduxjs/toolkit": "^1.9.7",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
